syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "OrderProto";

package order;

service OrderService {
  rpc getOrder (getOrderRequest) returns (getOrderResponse) {}
  rpc getOrderStatus (orderStatusRequest) returns (orderStatusResponse) {}
}

message getOrderRequest {
  string productName = 1;
  int32 productId = 2;
  string productDescription = 3;
  int32 units = 4;
  double unitCost = 5;
}

message getOrderResponse {
  int32 orderId = 1;
  double total = 2;
  string status = 3;
}

message orderStatusRequest {
  int32 orderId = 1;
}

message orderStatusResponse {
  string status = 1;
}